--- a/src/website_assets/src/index.html
+++ b/src/website_assets/src/index.html
@@ -10,13 +10,12 @@
   </head>
   <body>
     <main>
-      <img src="logo.png" alt="DFINITY logo" />
+      <img id="picture" src="logo.png" alt="picture book" />
+      <section id="storyText">Welcome to the Internet Computer Storybook! By Michael McGreal.</section>
       <form action="#">
-        <label for="name">Enter your name: &nbsp;</label>
-        <input id="name" alt="Name" type="text" />
-        <button type="submit">Click Me!</button>
+        <button id="next" type="submit">Lets begin :) </button>
       </form>
-      <section id="greeting"></section>
+      
     </main>
   </body>
 </html>
